--- a/webroot/css/tdtracx.css
+++ b/webroot/css/tdtracx.css
@@ -21,12 +21,12 @@ fieldset { margin-top: 20px; }
 .loading { display: none; }
 
 .spinner {
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	height:150px;
 	width:150px;
-	margin:0px auto;
+	margin: -75px 0px 0px -75px;
 	-webkit-animation: rotation .6s infinite linear;
 	-moz-animation: rotation .6s infinite linear;
 	-o-animation: rotation .6s infinite linear;
@@ -40,12 +40,12 @@ fieldset { margin-top: 20px; }
 }
 
 .overlay {
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 0px;
 	height:100vh;
 	width:100%;
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.3);
 	z-index: 2000;
 }
 
